--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div>
 			<img src="public/images/kevinSeal.png">
-				<h4>I'm a <a href="http://www.linkedin.com/profile/view?id=90477835">product manager taster</a>, <a href="https://github.com/kcoleman731">developer</a>, and <a href="http://dribbble.com/KevFColeman">aspiring designer</a>. I have a passion for beautiful user interface design, innovative solutions to technical problems, and building software that helps both developers and consumers enrich their lives.</h4>
+				<h4>I'm a <a href="http://www.linkedin.com/profile/view?id=90477835">product manager</a>, <a href="https://github.com/kcoleman731">developer</a>, and <a href="http://dribbble.com/KevFColeman">aspiring designer</a>. I have a passion for beautiful user interface design, innovative solutions to technical problems, and building software that helps both developers and consumers enrich their lives.</h4>
 
 				<h4>I've been working at <a href="http://www.rhapsody.com/">Rhapsody</a> for the past 18 months where I work on a bunch of very cool stuff including the <a href="http://developer.rhapsody.com">Rhapsody Developer Platform</a>, <a href="https://play.google.com/store/apps/details?id=com.rhapsody.songmatch">Rhapsody SongMatch</a>, <a href="https://itunes.apple.com/us/app/rhapsody-concerts/id656734271?mt=8">Rhapsody Concerts</A>, and a handful of other products.
 
